# sonic-login-manager

./: .gitignore  .kde-ci.yml  CMakeLists.txt  README.md
data/: CMakeLists.txt
data/pam/artix/: plasmalogin  plasmalogin-autologin  plasmalogin-greeter  soniclogin  soniclogin-autologin  soniclogin-greeter
data/pam/debian/: plasmalogin  plasmalogin-greeter  soniclogin-autologin
data/pam/freebsd/: plasmalogin  plasmalogin-autologin  plasmalogin-greeter  soniclogin  soniclogin-autologin  soniclogin-greeter
data/scripts/: Xsession  wayland-session
po/ar/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/az/: kcm_plasmalogin.po  plasma_login.po
po/bg/: kcm_plasmalogin.po  kcm_soniclogin.po  plasma_login.po  sonic_login.po
po/ca/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/ca@valencia/: kcm_soniclogin.po  sonic_login.po
po/cs/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/da/: kcm_plasmalogin.po  kcm_soniclogin.po  plasma_login.po  sonic_login.po
po/de/: kcm_plasmalogin.po  kcm_soniclogin.po  plasma_login.po  sonic_login.po
po/es/: kcm_soniclogin.po  sonic_login.po
po/eu/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/fi/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/fr/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/ga/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/gl/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/he/: kcm_soniclogin.po  sonic_login.po
po/hu/: kcm_plasmalogin.po  plasma_login.po
po/ia/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/id/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/is/: kcm_soniclogin.po  sonic_login.po
po/it/: kcm_soniclogin.po  sonic_login.po
po/ja/: kcm_plasmalogin.po  sonic_login.po
po/ka/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/ko/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/lt/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/lv/: kcm_soniclogin.po  sonic_login.po
po/nb/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/nl/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/nn/: kcm_plasmalogin.po  kcm_soniclogin.po  plasma_login.po
po/pl/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/pt_BR/: kcm_soniclogin.po  sonic_login.po
po/ro/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/ru/: kcm_plasmalogin.po
po/sk/: kcm_plasmalogin.po  kcm_soniclogin.po  plasma_login.po  sonic_login.po
po/sl/: kcm_plasmalogin.po  kcm_soniclogin.po  sonic_login.po
po/sv/: kcm_soniclogin.po  (+1 more)
services/: CMakeLists.txt  Xwrapper.config.in  plasmalogin-finish.runit  plasmalogin-main.dinit  plasmalogin-setup  plasmalogin-setup.dinit  plasmalogin-tmpfiles.conf.in  plasmalogin.dinit  plasmalogin.dinit-setup  plasmalogin.openrc  plasmalogin.runit  plasmalogin.s6-finish  plasmalogin.s6-run  plasmalogin.s6-setup  plasmalogin.service.in  plasmalogin.sh.bsd.in  plasmalogin.sh.in
services/bsd/: Xwrapper.config.in  soniclogin.in
services/dinit/: plasmalogin.in  soniclogin.in
services/dinit/logrotate/: soniclogin
services/openrc/: plasmalogin.in  soniclogin.in
services/openrc/logrotate/: soniclogin
services/runit/: run.in
services/runit/log/: run.in
services/s6/: producer-for  run.in  s6-finish  s6-run
services/s6/log/: consumer-for  pipeline-name  run.in
services/systemd/: plasmalogin.service.in  soniclogin.conf.in  soniclogin.service.in
services/sysvinit/: plasmalogin.in  soniclogin.conf.in  soniclogin.in
src/daemon/: CMakeLists.txt  DaemonApp.cpp  DaemonApp.h  Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h  Greeter.cpp  Greeter.h  KcmIpcServer.cpp  KcmIpcServer.h  LogindDBusTypes.cpp  LogindDBusTypes.h  PowerManager.cpp  PowerManager.h  Seat.cpp  Seat.h  SeatManager.cpp  SeatManager.h  SelfProvisioner.cpp  SelfProvisioner.h  SocketServer.cpp  SocketServer.h  Utils.h  XorgUserDisplayServer.cpp  XorgUserDisplayServer.h
src/frontend/greeter/: CMakeLists.txt  Messages.sh  main.cpp  plasma-login.service.in  soniclogin.service.in
src/frontend/greeter/backend/: GreeterProxy.cpp  GreeterProxy.h  Messages.h  SocketWriter.cpp  SocketWriter.h
src/frontend/greeter/mockbackend/: MockGreeterProxy.cpp  MockGreeterProxy.h
src/frontend/greeter/qml/: GreeterState.qml  KeyboardButton.qml  Login.qml  Main.qml  SessionButton.qml
src/frontend/kcm/: CMakeLists.txt  Messages.sh  kcm.cpp  kcm.h  kcm_messagelogger.cpp  kcm_plasmalogin.json  kcm_soniclogin.json  plasmalogindata.cpp  plasmalogindata.h  soniclogindata.cpp  soniclogindata.h
src/frontend/kcm/auth/: CMakeLists.txt  kcm_plasmalogin.actions  kcm_soniclogin.actions  plasmaloginauthhelper.cpp  sonicloginauthhelper.cpp  sonicloginauthhelper.h
src/frontend/kcm/ui/: Appearance.qml  AuthDialog.qml  WallpaperConfig.qml  main.qml
src/frontend/settings/: CMakeLists.txt  config.h.in  plasmaloginsettings.cpp  sonicloginsettings.cpp  sonicloginsettings.h  sonicloginsettingsbase.kcfg  sonicloginsettingsbase.kcfgc  sonicloginsettingsdefaults.cpp  sonicloginsettingsdefaults.h  wallpapersettings.cpp
src/frontend/settings/models/: sessionmodel.cpp  sessionmodel.h  usermodel.cpp
src/frontend/startkde/: CMakeLists.txt  plasma-login-kwin_wayland.service.in  plasma-login-kwin_x11.service.in  plasma-login-x11.target  soniclogin-apply-kscreen.service.in  soniclogin-kwin_x11.service.in  soniclogin-x11.target  start-soniclogin-x11.cpp  start-soniclogin.cpp  start-soniclogin.h  startplasma.cpp  startplasma.h  startplasmalogin-x11.cpp
src/frontend/wallpaper/: CMakeLists.txt  WallpaperFader.qml  main.cpp  main.qml  plasma-wallpaper.service.in  soniclogin-wallpaper.service.in  wallpaperapp.cpp  wallpaperapp.h  wallpaperwindow.cpp
src/helper/: CMakeLists.txt  HelperApp.cpp  HelperApp.h  HelperStartX11User.cpp  UserSession.cpp  UserSession.h  XAuth.cpp  XAuth.h  xorguserhelper.cpp  xorguserhelper.h
src/helper/backend/: PamBackend.cpp  PamBackend.h  PamHandle.cpp  PamHandle.h
test/: ConfigurationTest.cpp  QMLThemeConfigTest.cpp  SessionTest.cpp
(+38 files in other folders)
